--- a/ctep-electron/src/styles.scss
+++ b/ctep-electron/src/styles.scss
@@ -190,7 +190,6 @@ body {
         overflow: auto;
         .form-grid {
             padding: 0px;
-            background-color: white;
             border-radius: 0px;
             box-shadow: none;
             label {
@@ -265,6 +264,7 @@ body {
         border-radius: 4px 4px 0 0;
         .mat-tab-label {
             color: white;
+            opacity: 1;
         }
     }
     .mat-tab-body {
@@ -276,4 +276,8 @@ body {
     }
     background-color: white;
     box-shadow: 0px 2px 4px -1px rgba(0, 0, 0, 0.2), 0px 4px 5px 0px rgba(0, 0, 0, 0.14), 0px 1px 10px 0px rgba(0, 0, 0, 0.12);
+}
+
+.mat-form-field-appearance-outline .mat-form-field-outline  {
+    background-color: white;
 }
