--- a/ctep-electron/src/app/view/aluno/formulario-aluno/formulario-aluno.component.html
+++ b/ctep-electron/src/app/view/aluno/formulario-aluno/formulario-aluno.component.html
@@ -163,6 +163,6 @@
                     </mat-form-field>
                 </div>
             </mat-card>
-
+        </mat-tab>
       </mat-tab-group>
 </div>
