--- a/ctep-electron/src/app/view/turma/turma-menu.component.html
+++ b/ctep-electron/src/app/view/turma/turma-menu.component.html
@@ -1,15 +1,15 @@
 <mat-accordion>
-    <mat-expansion-panel [expanded]='true'>
+    <mat-expansion-panel [(expanded)]='expanded'>
         <mat-expansion-panel-header>
             <mat-panel-title>
                 Turma
             </mat-panel-title>
         </mat-expansion-panel-header>
         <div class="form-grid menu-secao">
-            <a class="two" [routerLink]="['', { outlets: { secondRouter: ['formularioTurma'] } }]">
+            <a class="two" [routerLink]="['', { outlets: { secondRouter: ['formularioTurma'] } }]" (click)="expanded=false">
                 <mat-icon>person_add</mat-icon><span>Adicionar Turma</span>
             </a>
-            <a class="two" [routerLink]="['', { outlets: { secondRouter: ['tabelaTurma'] } }]">
+            <a class="two" [routerLink]="['', { outlets: { secondRouter: ['tabelaTurma'] } }]" (click)="expanded=false">
                 <mat-icon>list</mat-icon><span>Listar Turmas</span>
             </a>
         </div>
