vincular aluno em turma

--- a/ctep-electron/src/app/view/aluno/pesquisar-aluno/pesquisar-aluno.component.html
+++ b/ctep-electron/src/app/view/aluno/pesquisar-aluno/pesquisar-aluno.component.html
@@ -2,6 +2,6 @@
 <div class="pesquisa">
     <h1>Pesquisar Alunos</h1>
     <filtro-aluno (pesquisar)="pesquisar($event)"></filtro-aluno>
-    <tabela-aluno [list]="list"></tabela-aluno>
+    <tabela-aluno [list]="list" (pesquisar)="pesquisar()"></tabela-aluno>
 </div>
 
