--- a/ctep-electron/src/app/view/aluno/aluno-menu.component.html
+++ b/ctep-electron/src/app/view/aluno/aluno-menu.component.html
@@ -1,5 +1,5 @@
 <mat-accordion>
-    <mat-expansion-panel [expanded]='expanded'>
+    <mat-expansion-panel [(expanded)]='expanded'>
         <mat-expansion-panel-header>
             <mat-panel-title>
                 Alunos
