correções de tela

--- a/ctep-electron/src/app/view/home/home.component.html
+++ b/ctep-electron/src/app/view/home/home.component.html
@@ -2,6 +2,7 @@
 <mat-toolbar color="primary">
     <mat-toolbar-row>
         <mat-icon aria-hidden="false" (mouseover)="desenhar('in')">menu</mat-icon>
+        <!-- <h3 class="logado">Usuário logado: {{usuarioLogado.nome}}</h3> -->
         <mat-icon aria-hidden="false" class="logout" matTooltip="Sair do sistema." (click)="logout()">logout</mat-icon>
     </mat-toolbar-row>
 </mat-toolbar>
