--- a/ctep-electron/src/app/view/aluno/formulario-aluno/formulario-aluno.component.html
+++ b/ctep-electron/src/app/view/aluno/formulario-aluno/formulario-aluno.component.html
@@ -1,7 +1,7 @@
 <div class="formulario">
     <div class="header">
         <div class="six">
-            <h1>Cadastro de Aluno</h1>
+            <h1>{{isEdicao ? 'Editar' : 'Cadastro de'}} Aluno</h1>
         </div>
         <div class="six buttons">
             <button mat-raised-button color="accent" (click)="voltar()">Voltar</button>
