--- a/ctep-electron/src/app/view/turma/turma-menu.component.html
+++ b/ctep-electron/src/app/view/turma/turma-menu.component.html
@@ -9,8 +9,8 @@
             <a class="two" [routerLink]="['', { outlets: { secondRouter: ['formularioTurma'] } }]" (click)="expanded=false">
                 <mat-icon>person_add</mat-icon><span>Adicionar Turma</span>
             </a>
-            <a class="two" [routerLink]="['', { outlets: { secondRouter: ['tabelaTurma'] } }]" (click)="expanded=false">
-                <mat-icon>list</mat-icon><span>Listar Turmas</span>
+            <a class="two" [routerLink]="['', { outlets: { secondRouter: ['pesquisarTurma'] } }]" (click)="expanded=false">
+                <mat-icon>list</mat-icon><span>Pesquisar Turmas</span>
             </a>
         </div>
     </mat-expansion-panel>
