--- a/ctep-electron/src/app/view/aluno/formulario-aluno/formulario-aluno.component.html
+++ b/ctep-electron/src/app/view/aluno/formulario-aluno/formulario-aluno.component.html
@@ -43,7 +43,7 @@
                     <input matInput [(ngModel)]="element.rg">
                 </mat-form-field>
                 <mat-form-field class="four">
-                    <mat-label>Orgão Emissor:</mat-label>
+                    <mat-label>Órgão Emissor:</mat-label>
                     <input matInput [(ngModel)]="element.orgaoEmissor">
                 </mat-form-field>
                 <custom-datetimepicker [(value)]="element.dataNascimento" name='Data de Nascimento' class="four">
