--- a/ctep-electron/src/app/view/aluno/tabela-aluno/tabela-aluno.component.html
+++ b/ctep-electron/src/app/view/aluno/tabela-aluno/tabela-aluno.component.html
@@ -9,12 +9,12 @@
                         <i class="material-icons">assignment</i>
                     </button>
                     <button mat-icon-button color="primary"
-                            matTooltip="Editar Turma"
+                            matTooltip="Editar Aluno"
                             (click)="editarAluno(element)">
                         <i class="material-icons">edit</i>
                     </button>
                     <button mat-icon-button color="primary"
-                            matTooltip="Excluir Turma"
+                            matTooltip="Excluir Aluno"
                             (click)="excluirAluno(element)">
                         <i class="material-icons">delete</i>
                     </button>
