--- a/ctep-electron/src/app/view/aluno/aluno-menu.component.html
+++ b/ctep-electron/src/app/view/aluno/aluno-menu.component.html
@@ -6,10 +6,10 @@
             </mat-panel-title>
         </mat-expansion-panel-header>
         <div class="form-grid menu-secao">
-            <a class="two" [routerLink]="['', { outlets: { secondRouter: ['formularioAluno'] } }]" (click)="expanded=false">
+            <a class="two" [routerLink]="['', { outlets: { secondRouter: ['formularioAluno'] } }]" (click)="mudarRota()">
                 <mat-icon>person_add</mat-icon><span>Adicionar Aluno</span>
             </a>
-            <a class="two" [routerLink]="['', { outlets: { secondRouter: ['pesquisarAluno'] } }]" (click)="expanded=false">
+            <a class="two" [routerLink]="['', { outlets: { secondRouter: ['pesquisarAluno'] } }]" (click)="mudarRota()">
                 <mat-icon>list</mat-icon><span>Pesquisar Alunos</span>
             </a>
         </div>
